--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
             </li>
             <li>
                 <img 
-                  src="images/daniel-wilson.jpg"
+                  src="./images/daniel-wilson.jpg"
                   alt="Daniel Wilson avatar"
                   width="264"
                   height="260"
