Update index html file

--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
                   src="./images/mark-guerrero.jpg"
                   alt="Mark Guerrero avatar"
                   width="264"
-                  height="260"
-                >
+                  height="260"/>
+
                 <h3 class="employees-list-fullname">Mark Guerrero</h3>
                 <p class="employees-list-text">Product Designer</p>
             </li>
@@ -113,8 +113,7 @@
                   src="./images/tom-ford.jpg"
                   alt="Tom Ford avatar"
                   width="264"
-                  height="260"
-                >
+                  height="260"/>
 
                 <h3 class="employees-list-fullname">Tom Ford</h3>
                 <p class="employees-list-text">Frontend Developer</p>
@@ -125,8 +124,7 @@
                   src="./images/camila-garcia.jpg"
                   alt="Camila Garcia avatar"
                   width="264"
-                  height="260"
-                >
+                  height="260"/>
 
                 <h3 class="employees-list-fullname">Camila Garcia</h3>
                 <p class="employees-list-text">Marketing</p>
@@ -136,8 +134,7 @@
                   src="./images/daniel-wilson.jpg"
                   alt="Daniel Wilson avatar"
                   width="264"
-                  height="260"
-                >
+                  height="260"/>
 
                 <h3 class="employees-list-fullname">Daniel Wilson</h3>
                 <p class="employees-list-text">UI Designer</p>
