--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
     
         <ul class="menu">
             <li class="menu-itn">
-                <a class="menu-link" href="./index.html">Studio</a>
+                <a href="./index.html" class="menu-link">Studio</a>
             </li>
             <li class="menu-itn">
-                <a class="menu-link" href="./index.html">Portfolio</a>
+                <a href="./index.html" class="menu-link">Portfolio</a>
             </li>
             <li class="menu-itn">
-                <a class="menu-link" href="./index.html">Contacts</a>
+                <a href="./index.html" class="menu-link">Contacts</a>
             </li>
         </ul> 
     </nav>  
@@ -94,7 +94,7 @@
     </section>
   <!-- =========== Employees Section =========== -->
     <section class="employees">
-        <h2 class="section-title">Our Team</h2>
+        <h2 class="employees-title">Our Team</h2>
         
         <ul class="employees-list">
             <li class="employees-list-item">
