--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
                 <a href="./index.html" class="menu-link">Studio</a>
             </li>
             <li class="menu-itn">
-                <a href="./index.html" class="menu-link">Portfolio</a>
+                <a href="" class="menu-link">Portfolio</a>
             </li>
             <li class="menu-itn">
-                <a href="./index.html" class="menu-link">Contacts</a>
+                <a href="" class="menu-link">Contacts</a>
             </li>
         </ul> 
     </nav>  
