--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
 
     <address class="contact-block">
         <ul class="contact-list">
-            <li class="contact-list-item">
+            <li class="contact-list-etem">
                 <a class="menu-link-link" href="mailto:info@devstudio.com">info@devstudio.com </a>
             </li>
-            <li class="contact-list-item">
+            <li class="contact-list-etem">
                 <a class="menu-link-link" href="tel:+110001111111">+11 (000) 111-11-11</a>
             </li>
         </ul>
