--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <section class="hero">
         <h1 class="main-title">Effective Solutions for Your Business</h1>
         
-        <button class="buy-now-btn" type="button">Order Service</button>
+        <button type="button" class="buy-btn">Order Service</button>
 
     </section>
     
