--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
  <!-- =========== Benefits Section =========== -->
     <section class="benefits">
         <div class="container"> 
-            <h2 class="benefits-unknown">Our benefits</h2>
+            <h2 class="visually-hidden">Our benefits</h2>
             <ul class="benefits-list">
                 <li class="benefits-list-item">
                     <h3 class="benefits-list-title">Strategy</h3>
@@ -97,7 +97,7 @@
             </ul>
         </div>
     </section>
-  <!-- =========== Employees Section =========== -->
+<!-- =========== Employees Section =========== -->
     <section class="employees">
         <div class="container">
             <h2 class="employees-title">Our Team</h2>
@@ -105,10 +105,10 @@
         <ul class="employees-list">
             <li class="employees-list-item">
                 <img class="employees-list-avatar"
-                  src="./images/mark-guerrero.jpg"
-                  alt="Mark Guerrero avatar"
-                  width="264"
-                  height="260"/>
+                src="./images/mark-guerrero.jpg"
+                alt="Mark Guerrero avatar"
+                width="264"
+                height="260"/>
 
                 <div class="employees-title-name">
                     <h3 class="employees-list-fullname">Mark Guerrero</h3>
@@ -118,10 +118,10 @@
 
             <li class="employees-list-item">
                 <img class="employees-list-avatar"
-                  src="./images/tom-ford.jpg"
-                  alt="Tom Ford avatar"
-                  width="264"
-                  height="260"/>
+                src="./images/tom-ford.jpg"
+                alt="Tom Ford avatar"
+                width="264"
+                height="260"/>
 
                 <div class="employees-title-name">
                     <h3 class="employees-list-fullname">Tom Ford</h3>
@@ -131,10 +131,10 @@
 
             <li class="employees-list-item">
                 <img class="employees-list-avatar"
-                  src="./images/camila-garcia.jpg"
-                  alt="Camila Garcia avatar"
-                  width="264"
-                  height="260"/>
+                src="./images/camila-garcia.jpg"
+                alt="Camila Garcia avatar"
+                width="264"
+                height="260"/>
 
                 <div class="employees-title-name">
                     <h3 class="employees-list-fullname">Camila Garcia</h3>
@@ -143,10 +143,10 @@
             </li>
             <li class="employees-list-item">
                 <img class="employees-list-avatar"
-                  src="./images/daniel-wilson.jpg"
-                  alt="Daniel Wilson avatar"
-                  width="264"
-                  height="260"/>
+                src="./images/daniel-wilson.jpg"
+                alt="Daniel Wilson avatar"
+                width="264"
+                height="260"/>
 
                 <div class="employees-title-name">
                     <h3 class="employees-list-fullname">Daniel Wilson</h3>
